# dmlcloud

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  ci_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/actions/setup_environment/: action.yml
.github/workflows/: build_and_upload_wheel.yml  release_public.yml  release_test.yml  run_linting.yml  run_tests.yml
dml/: metrics.py  util.py
dml/cli/: __init__.py  bench.py  train.py
dml/experiments/: __init__.py  mnist.py
dml/experiments/cv_classification/: __init__.py  config.py  experiment.py  models.py  tasks.py  transform.py
dml/training/: __init__.py  checkpoint.py  classification.py  metrics.py  scaling.py  trainer.py  util.py
dml/training/config/: __init__.py  common.py  config.py  meta.py  training.py  wandb.py
dmlcloud/: __init__.py  checkpoint.py  metrics.py  pipeline.py  stage.py
dmlcloud/cli/: train.py
dmlcloud/config/: __init__.py  common.py  config.py  meta.py  training.py  wandb.py
dmlcloud/experiments/: mnist.py
dmlcloud/experiments/cv_classification/: config.py  tasks.py  transform.py
dmlcloud/training/: __init__.py  checkpoint.py  classification.py  metrics.py  scaling.py  trainer.py  util.py
dmlcloud/training/config/: common.py  meta.py  wandb.py
dmlcloud/util/: __init__.py  argparse.py  data.py  distributed.py  git.py  horovod.py  logging.py  project.py  seed.py  slurm.py  tcp.py  thirdparty.py  util.py  wandb.py
doc/: conf.py  index.rst  reference.rst
examples/: barebone_mnist.py  mnist.py
myproject/: __init__.py
test/: conftest.py  test_data.py  test_import.py  test_metrics.py  test_myproject.py  test_sharding.py  test_smoke.py
