[build-system]
requires = ["setuptools", "packaging", "wheel", "build", "pre-commit", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "dmlcloud"
authors = [
    {name = "Sebastian Hoffmann"}
]
description = "Distributed torch training using horovod and slurm"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pytorch", "horovod", "slurm", "distributed", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Repository = "https://github.com/sehoffmann/dmlcloud"

[tool.setuptools.dynamic]
version = {attr = "dmlcloud.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py39"]
