[metadata]
name = myproject
version = attr: myproject.__version__
author = Your Name
author_email = your@email.address
url = www.website.com
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
