[metadata]
name = dml
version = attr: dml.__version__
author = Sebastian Hoffmann
author_email = your@email.address
url = https://github.com/sehoffmann/dml
description = Distributed torch training using horovod and slurm
long_description = file: README.md
long_description_content_type = text/markdown
keywords = torch, slurm, ml, deep learning, mlcloud
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
